--- a/index-1.html
+++ b/index-1.html
@@ -52,7 +52,7 @@
                                             var password = document.getElementById('password').value;
                                             localStorage.setItem('username', username);
                                             localStorage.setItem('password', password);
-                                                alert("Registration successful for username:", username);
+                                            alert("CADASTRO REALIZADO COM SUCESSO");
   var messageElement = document.getElementById("registration-message");
   messageElement.textContent = "Cadastro registrado com sucesso!"; 
   document.getElementById("register-form").reset();
