--- a/index-1.html
+++ b/index-1.html
@@ -53,10 +53,10 @@
                                             localStorage.setItem('username', username);
                                             localStorage.setItem('password', password);
                                             alert("CADASTRO REALIZADO COM SUCESSO");
-                                              window.location.href="index-2.html";
-  var messageElement = document.getElementById("registration-message");
-  messageElement.textContent = "Cadastro registrado com sucesso!"; 
-  document.getElementById("register-form").reset();
+                                            window.location.href= 'index-2.html';
+                                            var messageElement = document.getElementById("registration-message");
+                                            messageElement.textContent = "Cadastro registrado com sucesso!"; 
+                                            document.getElementById("register-form").reset();
                                           });
                                           </script>
                                 </div>
