--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                     <li class="nav-item nav-link"><a class="nav-link" href="#download">seja sócio</a></li>
                     <li class="nav-item nav-link"><a class="nav-link active" href="index-1.html">áREA DO INVESTIDOR</a></li>
                     <li class="nav-item nav-link"><a class="nav-link" href="#contact">contato</a></li>
+                    <li class="nav-item nav-link"><a class="nav-link active" href="jogo_nexus.html">JOGO</a></li>
                 </ul>
             </div>
             <section></section>
