--- a/jogo_nexus.html
+++ b/jogo_nexus.html
@@ -77,7 +77,9 @@
  <!-- Contadores de vida -->
  <div id="vida1" class="pontuacao">Vida Pedro: <span id="vidaValor1">100</span></div>
  <p id="vida2" class="pontuacao">Vida João: <span id="vidaValor2">100</span></p>
-
+ <br><br>
+<button type="button" onclick="window.location.href='index.html';">VOLTAR</button>
+  
 <script>
 // Obtém a referência para os objetos móveis
 const objeto1 = document.getElementById("objeto1");
