--- a/jogo_nexus.html
+++ b/jogo_nexus.html
@@ -66,8 +66,8 @@
   <div id="objeto2" class="objeto"></div>
 
   <!-- Contadores de pontuação -->
-  <div id="pontuacao1" class="pontuacao">Pontuação Pedro: <span id="pontuacaoValor1">0</span></div>
-  <div id="pontuacao2" class="pontuacao">Pontuação João: <span id="pontuacaoValor2">0</span></div>
+  <div id="pontuacao1" class="pontuacao">Pontuação Aspas: <span id="pontuacaoValor1">0</span></div>
+  <div id="pontuacao2" class="pontuacao">Pontuação Roboto: <span id="pontuacaoValor2">0</span></div>
 
  
 
@@ -75,8 +75,8 @@
   <canvas id="meuCanvas" width="600" height="600"></canvas>
 </div>
  <!-- Contadores de vida -->
- <div id="vida1" class="pontuacao">Vida Pedro: <span id="vidaValor1">100</span></div>
- <p id="vida2" class="pontuacao">Vida João: <span id="vidaValor2">100</span></p>
+ <div id="vida1" class="pontuacao">Vida Nexus: <span id="vidaValor1">100</span></div>
+ <p id="vida2" class="pontuacao">Vida Roboto: <span id="vidaValor2">100</span></p>
  <br><br><br><br>
 <button type="button" onclick="window.location.href='index.html';">VOLTAR</button>
   
