--- a/jogo_nexus.html
+++ b/jogo_nexus.html
@@ -75,7 +75,7 @@
   <canvas id="meuCanvas" width="600" height="600"></canvas>
 </div>
  <!-- Contadores de vida -->
- <div id="vida1" class="pontuacao">Vida Nexus: <span id="vidaValor1">100</span></div>
+ <div id="vida1" class="pontuacao">Vida Aspas: <span id="vidaValor1">100</span></div>
  <p id="vida2" class="pontuacao">Vida Roboto: <span id="vidaValor2">100</span></p>
  <br><br><br><br>
 <button type="button" onclick="window.location.href='index.html';">VOLTAR</button>
