--- a/index-3.html
+++ b/index-3.html
@@ -19,24 +19,13 @@
 </head>
 
 <body id="page-top" data-bs-spy="scroll" data-bs-target="#mainNav" data-bs-offset="77">
-    <nav class="navbar navbar-expand-md fixed-top navbar-light" id="mainNav">
-        <div class="container"><a class="navbar-brand" href="#"><img src="assets/img/NEXUS.png" width="102" height="124"></a><button data-bs-toggle="collapse" class="navbar-toggler navbar-toggler-right" data-bs-target="#navbarResponsive" type="button" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation" value="Menu"><i class="fa fa-bars"></i></button>
-            <div class="collapse navbar-collapse" id="navbarResponsive">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item nav-link"></li>
-                    <li class="nav-item nav-link"></li>
-                    <li class="nav-item nav-link"><a class="nav-link" href="index.html">Pagina inical</a></li>
-                </ul>
-            </div>
-        </div>
-    </nav>
     <header class="masthead" style="background-image:url('assets/img/intro-bg.jpg');">
         <div class="intro-body">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-8 mx-auto">
-                        <h1 class="brand-heading" style="font-size: 39px;">seja bem-vindo&nbsp;</h1>
-                        <h1 style="font-size: 70px;color: rgb(198,163,38);margin-top: 0px;"><span style="color: rgb(198, 48, 38);">investidor</span></h1>
+                        <h1 style="/*font-size: 122;*/color: rgb(198,163,38);margin-top: -60px;"><span style="color: rgb(255, 255, 255);">seja bem-vindo&nbsp;</span></h1>
+                        <h1 style="font-size: 60;color: rgb(198,163,38);margin-top: -40px;"><span style="color: rgb(198, 48, 38);">investidor</span></h1>
                         <p class="intro-text"></p><a class="btn btn-link btn-circle" role="button" href="#about"><i class="fa fa-angle-double-down animated"></i></a>
                     </div>
                 </div>
@@ -55,6 +44,22 @@
         </div>
     </section>
     <section class="text-center download-section content-section" id="download" style="background-image:url('assets/img/downloads-bg.jpg');">
+        <nav class="navbar navbar-expand-md fixed-top navbar-light" id="mainNav">
+            <div class="container-fluid"><a class="navbar-brand" href="#"><img src="assets/img/NEXUS.png" width="102" height="124"></a><button data-bs-toggle="collapse" class="navbar-toggler navbar-toggler-right" data-bs-target="#navbarResponsive" type="button" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation" value="Menu"><i class="fa fa-bars"></i></button>
+                <div class="collapse navbar-collapse" id="navbarResponsive">
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item nav-link"></li>
+                        <li class="nav-item nav-link"></li>
+                        <li class="nav-item nav-link"><a class="nav-link" href="index.html"><span style="color: rgb(208, 206, 206);">voltar para Pagina inical</span></a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        <h2>projeção de vendas - nexus&nbsp;</h2><img class="img-fluid" src="assets/img/grafico_projeção_vendas_nexus.png" style="width: 802px;">
+        <p style="font-size: 12px;"><br>Gráfico representando o aumento de capital e importância&nbsp;da área de robótica no brasil<br><br></p>
+        <p class="text-center float-start" style="font-size: 12px;/*margin-left: 9%;*/width: 1061.713px;"></p>
+        <p class="text-center" style="font-size: 12px;/*margin-left: 9%;*/text-align: center;"></p><img class="img-fluid" src="assets/img/vendas-anuais-robos-industria-2017.jpg" width="799" height="453">
+        <p class="text-center" style="font-size: 12px;/*margin-left: 9%;*/">Estamos observando um crescimento global nas vendas anuais de robôs. Com base nessa tendência, estamos otimistas de que podemos proporcionar um desempenho semelhante ou até superior para nossos investidores.</p>
         <h1 style="margin-top: 159px;margin-bottom: -30px;"><em><span style="color: rgb(197, 87, 87);">hardware </span></em><span style="color: rgb(197, 87, 87);">usado</span></h1><div class="bootstrap_datatables">
 <div class="container py-5">
   <header class="text-center text-black">
@@ -179,7 +184,6 @@
                 </div>
             </div>
         </section>
-        <div class="col-lg-8 mx-auto" style="margin-bottom: 0px;"><button class="btn btn-primary btn-lg btn-default" type="button">baixar manual de instruções</button></div>
         <h3 style="margin-bottom: -45px;margin-top: 161px;">Aspas sendo construido no plantão&nbsp;</h3><iframe allowfullscreen="" frameborder="0" src="https://www.youtube.com/embed/FKUgo7L0K0s" width="60%" height="400px" style="margin-top: 64px;margin-bottom: 104px;"></iframe>
         <h3 style="margin-top: -19px;margin-bottom: 8px;">ASPAS EM<span style="color: rgb(205, 54, 54);"> ACÃO!!</span></h3><iframe allowfullscreen="" frameborder="0" src="https://www.youtube.com/embed/UT14Yjr_Vf8" width="60%" height="400px"></iframe>
     </section>
@@ -231,6 +235,90 @@
     </section>
     <div class="map-clean">
         <footer class="text-center bg-dark" style="color: #000000;background: rgb(33, 37, 41);">
+            <h1><span style="color: rgb(255, 255, 255);">MANUAL DE AVENTURAS&nbsp;</span></h1>
+            <p style="margin-top: -33px;margin-bottom: 52px;"><span style="color: rgb(255, 255, 255);">Esse manual ajudaria nossos cliente (crianças e adoleçentes) inventar brincadeiras parecidas ao Aspas</span></p>
+            <div class="accordion" role="tablist" id="accordion-1">
+                <div class="accordion-item">
+                    <h2 class="accordion-header" role="tab"><button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#accordion-1 .item-1" aria-expanded="false" aria-controls="accordion-1 .item-1">Primeira etapa&nbsp;</button></h2>
+                    <div class="accordion-collapse collapse item-1" role="tabpanel" data-bs-parent="#accordion-1">
+                        <div class="accordion-body">
+                            <p class="mb-0">Coleta de Materiais Você precisará de um kit de robô Arduino, um computador com o software Arduino instalado, cabos para conectar o Arduino ao computador e uma arma de brinquedo segura.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" role="tab"><button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#accordion-1 .item-2" aria-expanded="false" aria-controls="accordion-1 .item-2">Segunda etapa</button></h2>
+                    <div class="accordion-collapse collapse item-2" role="tabpanel" data-bs-parent="#accordion-1">
+                        <div class="accordion-body">
+                            <p class="mb-0">Montagem do Robô Siga as instruções do kit para montar o corpo do robô. Certifique-se de deixar um espaço para a arma.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" role="tab"><button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#accordion-1 .item-3" aria-expanded="false" aria-controls="accordion-1 .item-3">Terceira etapa</button></h2>
+                    <div class="accordion-collapse collapse item-3" role="tabpanel" data-bs-parent="#accordion-1">
+                        <div class="accordion-body">
+                            <p class="mb-0">Instalação da Arma de Brinquedo Instale a arma de brinquedo no robô de acordo com as instruções do fabricante. Certifique-se de que está firmemente presa e segura.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" role="tab"><button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#accordion-1 .item-4" aria-expanded="false" aria-controls="accordion-1 .item-4">Quarta etapa</button></h2>
+                    <div class="accordion-collapse collapse item-4" role="tabpanel" data-bs-parent="#accordion-1">
+                        <div class="accordion-body">
+                            <p class="mb-0"> Conexão do Arduino Conecte o Arduino ao robô de acordo com as instruções do kit. Isso geralmente envolve conectar vários cabos aos motores e sensores do robô.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" role="tab"><button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#accordion-1 .item-5" aria-expanded="false" aria-controls="accordion-1 .item-5">Quinta etapa</button></h2>
+                    <div class="accordion-collapse collapse item-5" role="tabpanel" data-bs-parent="#accordion-1">
+                        <div class="accordion-body">
+                            <p class="mb-0">Programação do Arduino Use o software Arduino no seu computador para programar o robô. Você pode encontrar muitos tutoriais e exemplos online para ajudá-lo a começar.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" role="tab"><button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#accordion-1 .item-6" aria-expanded="false" aria-controls="accordion-1 .item-6">Sexta etapa</button></h2>
+                    <div class="accordion-collapse collapse item-6" role="tabpanel" data-bs-parent="#accordion-1">
+                        <div class="accordion-body">
+                            <p class="mb-0">Teste de Movimento Depois de programar o robô, teste-o para garantir que ele possa se mover corretamente. Se necessário, ajuste o código no Arduino.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" role="tab"><button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#accordion-1 .item-7" aria-expanded="false" aria-controls="accordion-1 .item-7">Sétima etapa</button></h2>
+                    <div class="accordion-collapse collapse item-7" role="tabpanel" data-bs-parent="#accordion-1">
+                        <div class="accordion-body">
+                            <p class="mb-0"> Programação da Arma de Brinquedo Agora, programe o Arduino para controlar a arma de brinquedo. Isso pode envolver a escrita de código para ativar a arma quando um certo comando for recebido.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" role="tab"><button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#accordion-1 .item-8" aria-expanded="false" aria-controls="accordion-1 .item-8">Oitava etapa</button></h2>
+                    <div class="accordion-collapse collapse item-8" role="tabpanel" data-bs-parent="#accordion-1">
+                        <div class="accordion-body">
+                            <p class="mb-0">Teste da Arma de Brinquedo Depois de programar a arma, teste-a para garantir que funciona corretamente. Lembre-se, a segurança é sempre a prioridade.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" role="tab"><button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#accordion-1 .item-9" aria-expanded="false" aria-controls="accordion-1 .item-9">Nona etapa</button></h2>
+                    <div class="accordion-collapse collapse item-9" role="tabpanel" data-bs-parent="#accordion-1">
+                        <div class="accordion-body">
+                            <p class="mb-0">Ajustes Finais Faça quaisquer ajustes finais no robô ou no código do Arduino conforme necessário.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" role="tab"><button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#accordion-1 .item-10" aria-expanded="true" aria-controls="accordion-1 .item-10">Décima etapa</button></h2>
+                    <div class="accordion-collapse collapse show item-10" role="tabpanel" data-bs-parent="#accordion-1">
+                        <div class="accordion-body">
+                            <p class="mb-0">Diversão! Agora que seu robô está completo, é hora de se divertir! Lembre-se de sempre usar o robô de maneira segura e responsável.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <div class="container text-white py-4 py-lg-5">
                 <ul class="list-inline">
                     <li class="list-inline-item me-4"><a class="link-light" href="#">Entrar em contato&nbsp;</a></li>
