--- a/index-3.html
+++ b/index-3.html
@@ -242,7 +242,7 @@
                     <h2 class="accordion-header" role="tab"><button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#accordion-1 .item-1" aria-expanded="false" aria-controls="accordion-1 .item-1">Primeira etapa&nbsp;</button></h2>
                     <div class="accordion-collapse collapse item-1" role="tabpanel" data-bs-parent="#accordion-1">
                         <div class="accordion-body">
-                            <p class="mb-0">Coleta de Materiais Você precisará de um kit de robô Arduino, um computador com o software Arduino instalado, cabos para conectar o Arduino ao computador e uma arma de brinquedo segura.</p>
+                            <p class="mb-0">Coleta de Materiais Você precisará de um kit de robô Arduino, um computador com o software Arduino instalado, cabos para conectar o Arduino ao computador .</p>
                         </div>
                     </div>
                 </div>
@@ -250,7 +250,7 @@
                     <h2 class="accordion-header" role="tab"><button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#accordion-1 .item-2" aria-expanded="false" aria-controls="accordion-1 .item-2">Segunda etapa</button></h2>
                     <div class="accordion-collapse collapse item-2" role="tabpanel" data-bs-parent="#accordion-1">
                         <div class="accordion-body">
-                            <p class="mb-0">Montagem do Robô Siga as instruções do kit para montar o corpo do robô. Certifique-se de deixar um espaço para a arma.</p>
+                            <p class="mb-0">Montagem do Robô Siga as instruções do kit para montar o corpo do robô.</p>
                         </div>
                     </div>
                 </div>
@@ -290,7 +290,7 @@
                     <h2 class="accordion-header" role="tab"><button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#accordion-1 .item-7" aria-expanded="false" aria-controls="accordion-1 .item-7">Sétima etapa</button></h2>
                     <div class="accordion-collapse collapse item-7" role="tabpanel" data-bs-parent="#accordion-1">
                         <div class="accordion-body">
-                            <p class="mb-0"> Programação da Arma de Brinquedo Agora, programe o Arduino para controlar a arma de brinquedo. Isso pode envolver a escrita de código para ativar a arma quando um certo comando for recebido.</p>
+                            <p class="mb-0"> Programe o Arduino para controlar a arma de brinquedo. Isso pode envolver a escrita de código para ativar a arma quando um certo comando for recebido.</p>
                         </div>
                     </div>
                 </div>
@@ -298,7 +298,7 @@
                     <h2 class="accordion-header" role="tab"><button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#accordion-1 .item-8" aria-expanded="false" aria-controls="accordion-1 .item-8">Oitava etapa</button></h2>
                     <div class="accordion-collapse collapse item-8" role="tabpanel" data-bs-parent="#accordion-1">
                         <div class="accordion-body">
-                            <p class="mb-0">Teste da Arma de Brinquedo Depois de programar a arma, teste-a para garantir que funciona corretamente. Lembre-se, a segurança é sempre a prioridade.</p>
+                            <p class="mb-0">Teste-a para garantir que funciona corretamente. Lembre-se, a segurança é sempre a prioridade.</p>
                         </div>
                     </div>
                 </div>
